grpc-test/00-grpc-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-grpc-test
  labels:
    istio-injection: enabled
