grpc-test/grpc-client-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpcclient-v1
  namespace: istio-grpc-test
  labels:
    app: grpcclient
spec:
  replicas: 2
  selector:
    matchLabels:
      app: grpcclient
      version: v1
  template:
    metadata:
      labels:
        app: grpcclient
        version: v1
    spec:
      containers:
      - name: grpcclient
        image: index.docker.io/pansq/grpcclient-svc:1.0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
      imagePullSecrets:
        - name: registrykey-pansq
