grpc-test/grpc-server-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpcserver-v2
  namespace: istio-grpc-test
  labels:
    app: grpcserver
spec:
  replicas: 2
  selector:
    matchLabels:
      app: grpcserver
      version: v2
  template:
    metadata:
      labels:
        app: grpcserver
        version: v2
    spec:
      containers:
      - name: grpcserver
        image: index.docker.io/pansq/grpcserver-v2:1.0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 30051
      imagePullSecrets:
        - name: registrykey-pansq
