grpc-test/grpc-server-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: grpcserver
  namespace: istio-grpc-test
  labels:
    app: grpcserver
spec:
  ports:
  - port: 30051
    name: grpc-port
  selector:
    app: grpcserver
