grpc-test/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: grpc-gateway
  namespace: istio-grpc-test2
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grpc-virtualservice
  namespace: istio-grpc-test2
spec:
  hosts:
  - "*"
  gateways:
  - grpc-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: grpcclient
        port:
          number: 8080
