grpc-test/grpc-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grpc-vs
  namespace: istio-grpc-test2
spec:
  hosts:
    - grpcserver
  http:
  - route:
    - destination:
        host: grpcserver
        subset: v1
      weight: 50
    - destination:
        host: grpcserver
        subset: v2
      weight: 50
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: grpc-dr
  namespace: istio-grpc-test2
spec:
  host: grpcserver
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
