grpc-test/istio-grafana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: istio-grafana-ingress
  namespace: istio-system
spec:
  rules:
  - host: istio-grafana.kylin
    http:
      paths:
      - path: /
        backend:
         serviceName: grafana
         servicePort: 3000
